--- a/src/app/czy-oplaca-sie-agencja-marketingowa/calculator.css
+++ b/src/app/czy-oplaca-sie-agencja-marketingowa/calculator.css
@@ -253,6 +253,9 @@ section.warranty h2 {
     margin-right: 0px;
     width: 100%;
   }
+  .second-card h3 {
+    font-size: 26px;
+  }
 
   .second-card {
     border-radius: 30px;
@@ -338,6 +341,9 @@ section.warranty h2 {
 
   .warranty_card_img img {
     margin: 30px 0px -50px 30px;
+  }
+  .second-card h6 {
+text-align: left;
   }
 }
 
