--- a/src/app/kontakt-marketersi/contact.css
+++ b/src/app/kontakt-marketersi/contact.css
@@ -886,7 +886,7 @@ div.glow {
 @media only screen and (max-width: 767px) {
   .first_heading_txt {
     font-size: 50px;
-    line-height: 70px;
+    line-height: 50px;
   }
   .orders_number.mobile {
     display: block;
@@ -1103,11 +1103,26 @@ div.glow {
     grid-template-columns: 50% 50%;
     gap: 20px;
 }
+.first_form_container{
+  padding: 2rem 0;
+}
 }
 @media only screen and (max-width: 380px) {
   .right_box_bottom img {
     width: 20rem;
     margin: -90px 0 0 0px;
+}
+.botum {
+  margin: 1rem 0;
+}
+.botum h3 {
+  font-size: 16px;
+}
+.map_content {
+  padding: 0 20px 50px;
+}
+.map_content h4 {
+  font-size: 20px;
 }
   .solid_bold{
     font-size: 6rem;
