--- a/src/components/organisms/marketing-consulting/expectation/expect.css
+++ b/src/components/organisms/marketing-consulting/expectation/expect.css
@@ -9,7 +9,8 @@
 .wte_header h2 {
   font-weight: 700;
   font-size: 60px;
-  margin-bottom: 100px;
+  max-width: 750px;
+  margin: 0 auto 100px;
 }
 
 .wte_header p {
@@ -22,6 +23,7 @@
   font-size: 27px;
   margin: 20px auto;
   font-weight: 300;
+  max-width: 650px;
 }
 
 .wte_end {
@@ -51,10 +53,14 @@
 }
 .wte_header h2 {
   margin-bottom: 50px;
-  font-size: 49px;
+  font-size: 40px;
 }   
 .wte_header p {
-  width: 100%;
+  width: 90%;
   font-size: 22px;
+}
+.wte p{
+  font-size: 22px;
+  width: 90%;
 }
 }
