--- a/src/components/organisms/marketing-consulting/selected-projects/selected-projects.css
+++ b/src/components/organisms/marketing-consulting/selected-projects/selected-projects.css
@@ -11,26 +11,29 @@
 .sp_header p {
   font-weight: 500;
   font-size: 32px;
-  padding: 0 200px;
+  padding: 0 220px;
 }
 
 .sp_card_right {
   background-color: white;
   padding: 50px;
   width: 450px;
-  margin-left: -320px;
+  margin-left: -150px;
 }
 
 .sp_card_left {
   background-color: white;
   padding: 50px;
   width: 450px;
-  margin-right: -300px;
+  margin-right: -150px;
   z-index: 1;
 }
 
 .sp_card_container {
   margin: 100px 0;
+}
+img.left-card-img {
+  width: 100%;
 }
 @media only screen and (max-width: 1024px){
   .sp_header h2 {
