--- a/src/app/kontakt-marketersi/contact.css
+++ b/src/app/kontakt-marketersi/contact.css
@@ -27,10 +27,10 @@
 }
 
 .name_Image {
-  display: flex;
+  display: grid;
   align-items: center;
   margin: 0 0 30px;
-  gap: 20px;
+  grid-template-columns: 50% 50%;
 }
 
 .logo img {
@@ -143,7 +143,7 @@
 
 .card {
   text-align: center;
-  padding: 3rem 2rem;
+  padding: 3rem 3rem;
   box-shadow: 4px 4px 15px 0px rgba(0, 0, 0, 0.15), 0px 0px 0px 0px #fff,
     2px 2px 2px 0px #fff inset, -2px -2px 2px 0px #c7c7c7 inset;
   --tw-shadow-colored: 4px 4px 15px 0px var(--tw-shadow-color),
@@ -176,7 +176,7 @@
 }
 
 .name {
-  font-size: 20px;
+  font-size: 23px;
   font-weight: 300;
   color: #3e3e3e;
   text-align: left;
@@ -638,8 +638,8 @@ div.glow {
 }
 
 .project_dp {
-  width: 120px;
-  height: 120px;
+  width: 100px;
+  height: 100x;
   border-radius: 50%;
 }
 
