--- a/src/components/organisms/cennik/cennikCards.css
+++ b/src/components/organisms/cennik/cennikCards.css
@@ -45,6 +45,8 @@
   border: none;
   font-weight: 500;
   box-shadow: 0 6px 0px #981a04;
+  margin: 0 auto;
+  display: block;
 }
 
 .feedback_section h2 {
@@ -119,6 +121,7 @@
   width: 90%;
   padding: 12px;
   outline: none;
+  
 }
 
 /* component two */
@@ -185,7 +188,7 @@ input[type="range"]:focus::-webkit-slider-thumb {
 /* slider range input */
 
 /* modal */
-.Modal {
+.CenikModal {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -214,16 +217,16 @@ input[type="range"]:focus::-webkit-slider-thumb {
   background-color: rgba(0, 0, 0, 0.9);
 }
 
-.Modal p {
+.CenikModal p {
   font-size: 18px;
   text-align: center;
   line-height: normal;
 }
-.Modal div {
+.cenikBtnDiv {
   margin-top: 32px;
 }
 
-.Modal div button {
+.cenikBtnDiv button {
   padding: 7px 28px;
   border-radius: 18px;
   border-color: #d21e00;
@@ -232,7 +235,7 @@ input[type="range"]:focus::-webkit-slider-thumb {
   font-size: 18px;
 }
 
-.Modal .close {
+.CenikModal .close {
   position: absolute;
   top: -42px;
   right: -38px;
