logo screen : data mapping

--- a/src/app/tresci-sprzedazowe/sales.css
+++ b/src/app/tresci-sprzedazowe/sales.css
@@ -462,7 +462,7 @@ img.copywriter-owocni {
   background-color: #f4be04;
 }
 .copywriter-orange-bg {
-  background-image: url(https://cdn.owocni.pl/img/single-copywriter/Reklama-hurum-tlo.jpg);
+  /* background-image: url(https://cdn.owocni.pl/img/single-copywriter/Reklama-hurum-tlo.jpg); */
   background-repeat: no-repeat;
   background-position: center;
   height: 812px;
