--- a/src/app/strategia-marketingowa/strategiamarketingowa.css
+++ b/src/app/strategia-marketingowa/strategiamarketingowa.css
@@ -439,6 +439,9 @@ max-width: 500px;
   gap: 20px;
   max-width: 800px;
 }
+.AnalysisCardDes{
+  margin: 0 0 20px;
+}
 
 .Analysis1_GridItem1 {
   flex: 0 0 calc(50% - 10px);
