--- a/src/components/organisms/team/image-slider/imageslider.css
+++ b/src/components/organisms/team/image-slider/imageslider.css
@@ -98,4 +98,13 @@
         height: 30px;
         box-shadow: none;
     }
+    .slick-prev {
+        left: 120px;
+        width: 62px;
+        height: 62px;
+        border-radius: 100%;
+        z-index: 1111;
+        box-shadow: none;
+        /* transition: transform 0.3s ease; */
+    }
 }
