--- a/src/components/organisms/strategia-marketingowa/accordion/yes.css
+++ b/src/components/organisms/strategia-marketingowa/accordion/yes.css
@@ -17,8 +17,10 @@
 .accordion-title {
     display: flex;
     justify-content: space-between;
-    font-size: 18px;
+    font-size: 26px;
     font-weight: 400;
+    min-height: 80px;
+    
 }
 .faqContainer .accordion-item{
     position: relative;
