--- a/src/components/organisms/team/team.module.css
+++ b/src/components/organisms/team/team.module.css
@@ -761,6 +761,11 @@
     .caringCard p {
         font-size: 16px;
     }
+    .caring img {
+        width: 70%;
+        margin: 0 auto;
+        display: block;
+    }
     .cartRow img {
         width: 70%;
         margin: 0 auto 20px;
