--- a/src/app/projektowanie-logo/logoDesign.css
+++ b/src/app/projektowanie-logo/logoDesign.css
@@ -8,9 +8,13 @@ h6 {
   padding: 0;
   margin: 0;
 }
+.LogoBannerContainer {
+  max-width: 1200px;
+  margin: 0 auto;
+}
 
 .projects-top-banner-container {
-  width: 650px;
+  width: 600px;
 }
 
 .projects-top-banner-text {
@@ -19,7 +23,7 @@ h6 {
 
 .top-banner-text {
   float: left;
-  padding: 0px 0 40px;
+  padding: 0px 0px 40px 0;
   line-height: 1.3;
 }
 
@@ -32,7 +36,7 @@ h6 {
   font-weight: 900;
   margin: 20px 0px;
   line-height: 67px;
-  font-size: 58px;
+  font-size: 75px;
   font-family: "Playfair Display", serif;
   color: #373737;
   letter-spacing: -0.025em;
@@ -43,8 +47,13 @@ h6 {
   z-index: 2;
   text-shadow: none;
 }
+img.projects-main-image-logop {
+  max-width: 90%;
+  margin: 40px auto 0;
+  display: block;
+}
 
-.orange-big-underline:after {
+/* .orange-big-underline:after {
   content: "";
   position: absolute;
   left: 3px;
@@ -57,7 +66,7 @@ h6 {
   bottom: 6px;
   margin-top: 5px;
   z-index: -1;
-}
+} */
 
 .top-banner-long-text {
   display: block;
@@ -65,7 +74,7 @@ h6 {
   font-family: "Georgia", serif;
   line-height: 45px;
   font-size: 40px;
-  font-weight: 400;
+  font-weight: 300;
   letter-spacing: -0.025em;
   color: #373737;
 }
@@ -75,6 +84,7 @@ h6 {
   color: #767676;
   letter-spacing: -0.025em;
   clear: both;
+  padding-right: 50px;
 }
 
 .projects-under-top-banner-text {
@@ -95,7 +105,7 @@ h6 {
 }
 
 .download-catalog-button-2 {
-  width: 490px;
+  width: 100%;
   background: #f2c22f;
   border: transparent;
   padding: 16px 3px;
@@ -127,14 +137,14 @@ h6 {
   max-width: 100%;
 }
 
-.top-section-banner:after {
+/* .top-section-banner:after {
   width: 290px;
   height: 605px;
   top: 100px;
   right: 60px;
   position: absolute;
   content: "";
-}
+} */
 
 .projects-top-section-banner:after {
   background: url() no-repeat;
@@ -174,11 +184,10 @@ h6 {
   padding: 40px 5px;
   line-height: 80px;
 }
-
 .theme-title1 {
   padding: 0 15px;
   padding-bottom: 35px;
-  font-size: 75px;
+  font-size: 100px;
   font-family: "Playfair Display", serif;
   color: #373737;
   font-weight: 900;
@@ -187,11 +196,13 @@ h6 {
   margin-left: -15px;
   margin-right: -15px;
   letter-spacing: -0.025em;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 .projects-under-big-header {
-  font-size: 28px;
-  letter-spacing: -0.025em;
+  max-width: 690px;
+  margin: 0 auto;
 }
 
 .theme-desc {
@@ -234,6 +245,9 @@ h6 {
   line-height: 33px;
 }
 
+.pGuid {
+  max-width: 450px;
+}
 .orange-link {
   color: #e0ab06;
   border-bottom: 2px #e0ab06 solid;
@@ -296,9 +310,8 @@ h6 {
 }
 
 .opinion-box-content {
-  padding: 50px 25px;
-  /* width: 64%; */
-  width: 66%;
+  padding: 50px 50px;
+  width: 55%;
   background-color: white;
   float: right;
   margin: 50px 0px 50px 0px;
@@ -322,7 +335,7 @@ h6 {
 }
 
 .projects-opinion-1 {
-  margin: 95px 0px 50px 0px;
+  margin: 50px 0px 50px 0px;
 }
 
 .opinion-box-text {
@@ -388,7 +401,7 @@ h6 {
 }
 
 .projects-includes-li {
-  font-size: 20px;
+  font-size: 18px;
   padding-bottom: 20px;
   letter-spacing: -0.025em;
 }
@@ -405,8 +418,7 @@ h6 {
 }
 
 .projects-oferta-veggo-bg {
-  height: 550px;
-  /* position: absolute; */
+  height: auto;
   top: -3%;
   right: 0px;
 }
@@ -438,7 +450,7 @@ h6 {
 }
 
 .projects-big-text100 {
-  font-size: 20px;
+  font-size: 18px;
   letter-spacing: -0.025em;
   line-height: 22px;
   margin-bottom: 50px;
@@ -446,7 +458,7 @@ h6 {
 
 .projects-download-catalog-button {
   font-size: 25px;
-  max-width: 485px;
+  max-width: 550px;
 }
 
 .projects-button-margin {
@@ -455,9 +467,10 @@ h6 {
 
 .copywriter-intro-bg-5-label {
   font-family: "Playfair Display";
-  font-size: 72px;
+  font-size: 80px;
   font-weight: 900;
   margin-bottom: 25px;
+  line-height: 90px;
 }
 
 .projects-theme-title3 {
@@ -517,6 +530,8 @@ h6 {
   font-weight: 400;
   margin-bottom: 40px;
   color: #515151;
+  max-width: 500px;
+  margin-left: auto;
 }
 
 .projects-happy-clients-margin {
