--- a/src/app/tresci-sprzedazowe/sales.css
+++ b/src/app/tresci-sprzedazowe/sales.css
@@ -19,7 +19,7 @@ section.sales_banner {
   margin-left: -75px;
 }
 .names-top-banner-container {
-  width: 815px;
+  width: 680px;
 }
 .copywriter-page section.page-top .projects-top-banner-text {
   margin-top: 86px;
@@ -31,8 +31,8 @@ section.sales_banner {
   display: block;
   font-weight: 900;
   margin: 20px 0px;
-  line-height: 67px;
-  font-size: 65px;
+  line-height: normal;
+  font-size: 85px;
   font-family: "Playfair Display", serif;
   color: #373737;
   letter-spacing: -0.025em;
@@ -84,7 +84,7 @@ section.sales_banner {
 .copywriter-page .old-btn a.btn {
   padding: 18px;
   position: relative;
-  font-size: 22px;
+  font-size: 18px;
   font-weight: bold;
   border-radius: 10px;
   margin: 20px auto;
