--- a/src/components/organisms/logo/accordion/accordion.css
+++ b/src/components/organisms/logo/accordion/accordion.css
@@ -4,7 +4,7 @@
     padding: 70px 0;
 }
 .accordion-item {
-    border-bottom: 2px solid #b9b9b9;
+    /* border-bottom: 2px solid #b9b9b9; */
     padding: 10px 20px 0px 0 !important;
 }
 
