logo screen responsive

--- a/src/app/projektowanie-logo/logoDesign.css
+++ b/src/app/projektowanie-logo/logoDesign.css
@@ -1706,6 +1706,6 @@ contact-inputs textarea {
     font-size: 30px;
   }
   .nazwa_footer_bottom_left {
-    display: none;
+    display: none !important;
 }
 }
